--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -1,4 +1,4 @@
-.card-spot {
+.card-spot-container {
     display: flex;
     flex-direction: column;
     margin: 10px;
@@ -9,7 +9,6 @@
     min-height: 260px;
     max-width: 300px;
     max-height: 360px;
-    z-index: -111;
 }
 
 
